--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <br>
 <h2>About me</h2>
 <hr/>
-<img style="float:right;display: block;margin-left: auto;margin-right: auto;width: 20%;height: 20%" src="./pictures/profile.jpg" alt="my picture">
+<img style="float:right;display: block;margin-left: auto;margin-right: auto;width: 20%;height: 20%" src="./pictures/profile.jpeg" alt="my picture">
 Rohit is currently a computer science master's student at Stony Brook University, NY. He is interested in
     operating systems and systems security. Before coming to Stony Brook, he worked as a software engineer in Accenture.
     <br>
