--- a/index.html
+++ b/index.html
@@ -20,33 +20,58 @@
 <br>
 <h2>About me</h2>
 <hr/>
+
 <img style="float:right;display: block;margin-left: auto;margin-right: auto;width: 20%;height: 20%" src="./pictures/profile.jpeg" alt="my picture">
-Rohit is currently a computer science master's student at Stony Brook University, NY. He is interested in
-    operating systems and systems security. Before coming to Stony Brook, he worked as a software engineer in Accenture.
-    <br>
-    He is on a look out for interships in Software Engineering and Systems Engineering roles.
-    More information is available in his Resume.
-    <br>
-He is also a Potter head and spidey fan. He also likes playing computer games, reading books and listening
-to podcast.
+<br>
+Currently, I'm pursuing master's in computer science at Stony Brook University, New York.
+
 <br>
 <br>
+
+I graduated with an undergraduate degree in mechanical engineering from IIT(BHU) Varanasi in 2017.
+
 <br>
-<h2>Software I am currently using</h2>
+<br>
+
+I've worked for 2 years EXL services as Analytics consultant working on problems of Digital marketing and banking. 
+And 2 years at American Express as Data Scientist working on problems of credit risk. 
+
+<br>
+<br>
+
+My interests lie in the areas of algorithmic problem solving, software development and data science.
+I have relevant experience in the same along with significant exposure to analytics, finance and risk modeling.
+    
+<br>
+<br>
+
+Currently, I'm looking for summer internships ( May 2022 - july 2022) in Software Engineering and Data science roles.
+
+<br>
+<br>
+
+<h2>Work Experiance</h2>
 <hr/>
-<h4>Operating System</h4>
-I am currently using <a href="https://endeavouros.com/">EndevourOS</a> is an Arch Based Linux distribution, I always prefer using Linux on my personal machines.
-I also recommend people to make a switch from Ubuntu to Arch based distributions, there is much more offered here in the Arch world.
-<h4>Desktop Environment</h4>
-Using <a href="https://github.com/baskerville/bspwm">bspwm</a>, polybar and sxhkd. Bspwm is a tiling window manager which tiles windows automatically onto the screen.
-If you are using Linux and haven't checked out any tiling window manager. I highly recommend trying one. It would feel
-like a new way to interact with your computer. It is far more efficient than a traditional desktop environment, and also
-looks very cool. :P
-<h4>Text editor and IDE</h4>
-For smaller tasks and projects is use Neovim. I use a preconfigured version called <a href="https://nvchad.github.io/">Nvchad</a>.
-I cannot explain in words the usefulness and extensibility of vim, everyone should spend some time learning vim. 
-OSS verison of Vscode is my IDE of choice, but often times when I want to use a GUI text editor I use Geany.
-<h3>I recommend having a quick look at the other links before leaving</h3>
+
+<h4>American Express</h4>
+Data Scientist/Risk Analyst  -- Jul'19 to Jul'21 
+<br>
+<br>
+I was responsible for building, maintaining and deployment of Amex’s critical Total
+Structural Risk and Credit Default Scoring System (CDSS, transaction authorization) models using gradient boosting. I was responsible for assessing new data sources, like home equity, commercial bureau info, bank
+statements, cellular data and changes in bureau scores versions on Amex’s proprietary models.
+<br>
+<br>
+
+<h4>EXL Services</h4>
+Analytics consultant  -- Sep'17 to Jul'19 
+<br>
+<br>
+I worked on various projects in Digital transformation and marketing. I Automated the campaigns performance measurement using VBA. The tool now provides an
+extensive report, with functionality to segment performance on financial/risk attributes and significance testing of KPIs. 
+I worked on various impact assessment and campaigns design problems.
+<br>
+<br>
 
 <footer style="font-size:14px;">
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
