--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@ I worked on various impact assessment and campaigns design problems.
 <br>
 <br>
 
+<h2> ACADEMIC ACHIEVEMENTS </h2> 
+<hr/>
+
+
+<br>
+● Awarded the Inspire Scholarship by the Government of India for scoring among the top 1% in the All India Senior School Certificate Examination (2013).
+<br>
+● Secured All India Rank of 2620 and 1253 in Joint Entrance Examination (JEE) - Advance and Mains stages respectively among over a million candidates.
+<br>
+● Received full tuition fee waiver under the Merit cum Means Scholarship program, awarded by the Indian Institute of Technology (BHU), Varanasi.
+<br>
+● Won Mechanomania - a mechanical contraption design competition organized by Volvo Eicher Commercial Vehicles Limited. Subsequently, also served as the Campus Ambassador for Volvo Eicher.
+<br>
+● Scored an aggregate of 95.8%, highest in my school, in the All India Senior School Certificate Examination 2013.
+<br>
 <footer style="font-size:14px;">
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
     <a href="contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
