--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,12 @@ Implemented segregated free list allocator for the x86-64 architecture which doe
 Allocator has supports immediate coalescing of blocks on free with adjacent free blocks, boundary tags to support efficient coalescing and free lists maintained using last in first out (LIFO) structure
 <a href="https://github.com/2108arunk/CSE-320-Systems-programming/tree/main/HW3%20-%20Dynamic%20Memory%20Allocator%20in%20C">Link to Github</a></p>
 
+<h3>Make command Implementation in C</h3>
+<p>
+Implement a program called cook, that behaves like a simplified version of make, with the ability to run jobs in parallel up to a specified maximum. 
+Became familiar with low-level Unix/POSIX system calls related to processes, signal handling, files, and I/O redirection.
+<a href="https://github.com/2108arunk/CSE-320-Systems-programming/tree/main/HW4%20-%20Parallel%20COOK%20posix%20system%20programming">Link to Github</a></p>
+
 <footer style="font-size:14px;">
     <a href="index.html"><img src="pictures/footer-home.svg" alt="Home" title="Return to main page"> HOME</a> &mdash;
     <a href="contact.html"><img src="pictures/email.svg" alt="Contact" title="How to contact me"> CONTACT</a> &mdash;
